--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ChatApp - Simple Messaging</title>
-    <meta name="description" content="A simple and modern messaging app for connecting with friends and family" />
-    <meta name="author" content="ChatApp" />
+    <link rel="icon" type="image/png" href="/icon.png" />
+    <title>ChatAppPQC - Safe against Quantum attacks</title>
+    <meta
+      name="description"
+      content="A message app that uses post-quantum cryptography to secure your messages from quantum computer attacks."
+    />
+    <meta name="author" content="ChatAppPQC" />
 
-    <meta property="og:title" content="ChatApp - Simple Messaging" />
-    <meta property="og:description" content="A simple and modern messaging app for connecting with friends and family" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:title"
+      content="ChatAppPQC - Safe against Quantum attacks"
+    />
+    <meta
+      property="og:description"
+      content="A message app that uses post-quantum cryptography to secure your messages from quantum computer attacks."
+    />
   </head>
 
   <body>
